SER-600. Fixes some spacing.

--- a/modules/front-end/app/assets/stylesheets/_gift_certificate_checkout.less
+++ b/modules/front-end/app/assets/stylesheets/_gift_certificate_checkout.less
@@ -261,6 +261,8 @@
     }
 
     #review-button {
+      margin-top:15px;
+
       strong {
         padding-left:15px;
         padding-right:15px;
